--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+.env
+.env-test
+.env-production
+.env-development
