--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   app_backend:
+    container_name: app_backend
     build: .
     command: rails server -p 3000 -b '0.0.0.0'
     volumes:
@@ -10,8 +11,12 @@ services:
       - "3000:3000"
     links:
       - postgres
+    environment:
+      - POSTGRES_PORT_5432_TCP_ADDR=postgres
+      - POSTGRES_PORT_5432_TCP_PORT=5432
       
   postgres:
+    container_name: app_database
     image: postgres:9.4
     ports:
       - "5432"
